added info research and outworld

--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
                             <li>Tower Progression</li>
                             <li>Code Smasher</li>
                             <li>Keyboard Madness</li>
-                            <li>Many other more that are yet to come</li>
+                            <li>Dynamic Information Network Research</li>
+                            <li>OutWorld</li>
                         </strong>
                     </ul>
                     Each individual project is designated to solve a particular global issue, promote education and spread
@@ -297,6 +298,52 @@
                     <strong><a class="gameLink" href="https://cheng-i-lin.github.io/Keyboard_Madness/">Click here to play Keyboard Madness now...</a></strong>
                 </div>
             </div>
+            <div id="research">
+                <div class="imgContainer">
+                    <img class="slideImg">
+                </div>
+                <div class="textContainer">
+                    <h1>Dynamic Information Network Research</h1><br>
+                    <strong>Research Summary/Abstract:</strong><br>
+                    An important hallmark of our globalized, modern society is the rapid information flow through densely connected networks composed of 
+                    people and personal technologies. People could obtain knowledge, communicate over distances, and perform activities previously unfeasible. 
+                    However, false information can also proliferate in the global network and induce real harm. Thus, it is essential to understand how data flows 
+                    through human networks in order to harness the benefits and reduce the potential harms. We created two models, the social network model and 
+                    the broadcast model, to investigate how information flow is affected by parameters such as persuasiveness, selection method, and network structure. 
+                    In the social network model, information is spread through interactions between individuals in the given network, initiated by a selected individual. 
+                    In the broadcast model, information is spread to everyone simultaneously through a broadcasting system. Using the models to simulate different scenarios, 
+                    we sought to answer two questions: 1) how does the selection method of the source affect information spread? and 2) how does the persuasiveness parameter 
+                    change information spread? Our experiments showed that higher persuasiveness effectively improved the spread of information. We found that the persuasiveness 
+                    of the initial node, rather than the number of its connections, had more impact on information spread. Moreover, the highest persuasiveness selection 
+                    method in both the social network and broadcast models consistently influenced the opinions of the entire network. Our findings, if utilized alongside 
+                    social psychology research, may help the society facilitate more effective communication and counter the prevalence of misinformation. 
+                    <br><br>
+                    <strong><a class="gameLink" href="https://cheng-i-lin.github.io/Keyboard_Madness/">Click here to view Dynamic Information Network now...</a></strong>
+                </div>
+            </div>
+            <div id="outworld">
+                <div class="imgContainer">
+                    <img class="slideImg">
+                </div>
+                <div class="textContainer">
+                    <h1>OutWorld</h1><br>
+                    <strong>Game Inspiration:</strong><br>
+                    Since human existence, we have been wasting the resources Mother Nature provides, massacring innocent animals, and causing 
+                    detrimental, irreversible environmental damages all for our own benefits. This is also evident in my home country, Taiwan,
+                    where we utilize coal power plants to generate electrical power but also worsening air pollution at the same time. Consequently, 
+                    I worked with other people from other schools to develop a mobile game that serves as an educational tool that children can play while
+                    learning about essential details and information about the environment.
+                    <br><br>
+                    <strong>Game Outline/Instruction:</strong><br>
+                    In OutWorld, the users would play a character that was raised by ducks outside the city. However, as he grew up, he decided
+                    to travel back to the human civilization. However, the city once flourished with wildlife are nowcovered with dark, polluted clouds,
+                    abandoned architectures, and destoryed ecosystems, which were all caused by the tyranny of the mice population, who controls the coal
+                    power plants that pollutes the entire city. In order to restore nature back into the city, users must pass through all levels, 
+                    learning environmental lessons along the way.                    
+                    <br><br>
+                    <strong><a class="gameLink" href="https://cheng-i-lin.github.io/Keyboard_Madness/">Click here to play OutWorld now...</a></strong>
+                </div>
+            </div>
             <div id="toBeContinue">
                 <div class="imgContainer">
                     <img class="slideImg">
@@ -313,10 +360,8 @@
                     <strong>Current Projects in Work:</strong><br>
                     <ul>
                         <li>Driving Force</li>
-                        <li>Dynamic Information Network</li>
                         <li>Space Survivor</li>
                         <li>Climate Rage</li>
-                        <li>Atlas: Project Zeus</li>
                     </ul>
                     *The order depicts the approximate order of release of each project<br><br>
                 </div>
@@ -332,6 +377,8 @@
             <div class="slideCircle" id="slide7"></div>
             <div class="slideCircle" id="slide8"></div>
             <div class="slideCircle" id="slide9"></div>
+            <div class="slideCircle" id="slide10"></div>
+            <div class="slideCircle" id="slide11"></div>
         </div>
         <!--Navigation on the top of the page, placed after banner to show the border line at bottom for separation-->
         <div class="allDiv" id="topNavigaion">
