added pics for new projects

--- a/index.html
+++ b/index.html
@@ -313,12 +313,9 @@
                     In the social network model, information is spread through interactions between individuals in the given network, initiated by a selected individual. 
                     In the broadcast model, information is spread to everyone simultaneously through a broadcasting system. Using the models to simulate different scenarios, 
                     we sought to answer two questions: 1) how does the selection method of the source affect information spread? and 2) how does the persuasiveness parameter 
-                    change information spread? Our experiments showed that higher persuasiveness effectively improved the spread of information. We found that the persuasiveness 
-                    of the initial node, rather than the number of its connections, had more impact on information spread. Moreover, the highest persuasiveness selection 
-                    method in both the social network and broadcast models consistently influenced the opinions of the entire network. Our findings, if utilized alongside 
-                    social psychology research, may help the society facilitate more effective communication and counter the prevalence of misinformation. 
+                    change information spread? Our experiments showed that higher persuasiveness effectively improved the spread of information.  
                     <br><br>
-                    <strong><a class="gameLink" href="https://cheng-i-lin.github.io/Keyboard_Madness/">Click here to view Dynamic Information Network now...</a></strong>
+                    <strong><a class="gameLink" href="https://docs.google.com/document/d/1MqAarn_hBGiJU0gcu7y6Bc-llCip5t5o/edit?rtpof=true">Click here to view the JEI document of Dynamic Information Network now...</a></strong>
                 </div>
             </div>
             <div id="outworld">
@@ -341,7 +338,7 @@
                     power plants that pollutes the entire city. In order to restore nature back into the city, users must pass through all levels, 
                     learning environmental lessons along the way.                    
                     <br><br>
-                    <strong><a class="gameLink" href="https://cheng-i-lin.github.io/Keyboard_Madness/">Click here to play OutWorld now...</a></strong>
+                    <strong>OutWorld is still under development and testing...</a></strong>
                 </div>
             </div>
             <div id="toBeContinue">
